--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,9 +13,9 @@ dependencies:
 
   http: ^1.2.2
   get: ^4.6.6 # State Management!
-  get_it: ^7.6.4 # locator
-  dio: ^5.5.0+1 # Network handling
-  shared_preferences: ^2.2.2 # Local Storage!
+  get_it: ^8.0.2 # locator
+  dio: ^5.7.0 # Network handling
+  shared_preferences: ^2.3.3 # Local Storage!
 
   # Download!
   path_provider: ^2.1.5
@@ -23,39 +23,42 @@ dependencies:
   hive_flutter: ^1.1.0
 
   # Localization!
-  intl: ^0.19.0
+  intl: ^0.20.0
   #  app_links: ^6.3.2
-  share_plus: ^10.1.0
-  url_launcher: ^6.3.0
-  image_picker: ^1.0.4
+  share_plus: ^10.1.2
+  url_launcher: ^6.3.1
+  image_picker: ^1.1.2
   flutter_hls_parser: ^2.0.1
-  flutter_localization: ^0.2.0
-  flutter_image_compress: ^2.1.0
-  chewie: ^1.8.5
+#  flutter_localization: ^0.2.2
+  flutter_image_compress: ^2.3.0
+#  chewie: ^1.8.5
   youtube_player_flutter: ^9.1.1
 
   # UI Helpers!
   shimmer: ^3.0.0
-  video_player: ^2.9.1
+  video_player: ^2.9.2
   carousel_slider: ^5.0.0
 
   # Font Style!
   google_fonts: ^6.2.1
-  html: ^0.15.4
+  html: ^0.15.5
 
   # Location!
-  geolocator: ^13.0.1
-  geocoding: ^3.0.0
+#  geolocator: ^13.0.2
+#  geocoding: ^3.0.0
 
   # Utilities!
-  device_info_plus: ^10.1.2
-  connectivity_plus: ^6.0.5
+#  device_info_plus: ^11.1.1
+  connectivity_plus: ^6.1.0
   permission_handler: ^11.3.1
+
+dependency_overrides:
+  web: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
