--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_it: ^8.0.2 # locator
   dio: ^5.7.0 # Network handling
   shared_preferences: ^2.3.3 # Local Storage!
+  flutter_cache_manager: ^3.4.1
 
   # Download!
   path_provider: ^2.1.5
@@ -24,14 +25,12 @@ dependencies:
 
   # Localization!
   intl: ^0.20.0
-  #  app_links: ^6.3.2
   share_plus: ^10.1.2
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
   flutter_hls_parser: ^2.0.1
 #  flutter_localization: ^0.2.2
   flutter_image_compress: ^2.3.0
-#  chewie: ^1.8.5
   youtube_player_flutter: ^9.1.1
 
   # UI Helpers!
@@ -48,7 +47,6 @@ dependencies:
 #  geocoding: ^3.0.0
 
   # Utilities!
-#  device_info_plus: ^11.1.1
   connectivity_plus: ^6.1.0
   permission_handler: ^11.3.1
 
